# docs/swagger.json
@@ -18,11 +18,13 @@
                 "summary": "Поиск задачи по тексту заголовка или описания",
                 "parameters": [
                     {
-                        "type": "integer",
                         "description": "Текст в JSON",
-                        "name": "id",
-                        "in": "path",
-                        "required": true
+                        "name": "input",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/httpserver.getTaskByTextRequest"
+                        }
                     }
                 ],
                 "responses": {
@@ -107,7 +109,7 @@
                     "200": {
                         "description": "Успешное получение задач",
                         "schema": {
-                            "$ref": "#/definitions/httpserver.taskResponse"
+                            "$ref": "#/definitions/httpserver.tasksResponse"
                         }
                     },
                     "400": {
@@ -147,7 +149,7 @@
                     "200": {
                         "description": "Успешное получение задач",
                         "schema": {
-                            "$ref": "#/definitions/httpserver.taskResponse"
+                            "$ref": "#/definitions/httpserver.tasksResponse"
                         }
                     },
                     "400": {
@@ -174,13 +176,11 @@
                 "summary": "Поиск задачи по её id в postgres",
                 "parameters": [
                     {
+                        "type": "integer",
                         "description": "id задачи",
-                        "name": "input",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/httpserver.getTaskByTextRequest"
-                        }
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
