# internal/ports/httpserver/handlers.go
@@ -13,11 +13,11 @@ import (
 // @Summary		Добавление новой задачи
 // @Description	Возвращает добавленную задачу с её id в postgres
 // @Produce		json
-// @Param			input body addTaskRequest true "Новая задача в JSON"
-// @Success		200		{object}	taskResponse	"Успешное добавление"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 400 {object} taskResponse "Неверный формат входных данных"
-// @Router			/task [post]
+// @Param		input body addTaskRequest true "Новая задача в JSON"
+// @Success		200	{object} taskResponse "Успешное добавление"
+// @Failure		500	{object} taskResponse "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse "Неверный формат входных данных"
+// @Router		/task [post]
 func addTask(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var req addTaskRequest
@@ -52,12 +52,12 @@ func addTask(a app.App) gin.HandlerFunc {
 // @Summary		Поиск задачи по её id в postgres
 // @Description	Возвращает задачу с заданным id
 // @Produce		json
-// @Param			input body getTaskByTextRequest true "id задачи"
-// @Success		200		{object}	taskResponse	"Успешное получение"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 400 {object} taskResponse "Неверный формат входных данных"
-// @Failure 404 {object} taskResponse "Задача с заданным id не найдена"
-// @Router			/task/{id} [get]
+// @Param		id path int true "id задачи"
+// @Success		200	{object} taskResponse "Успешное получение"
+// @Failure		500	{object} taskResponse "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse "Неверный формат входных данных"
+// @Failure 	404 {object} taskResponse "Задача с заданным id не найдена"
+// @Router		/task/{id} [get]
 func getTaskById(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		id, err := strconv.Atoi(c.Param("id"))
@@ -84,11 +84,11 @@ func getTaskById(a app.App) gin.HandlerFunc {
 // @Summary		Поиск задачи по тексту заголовка или описания
 // @Description	Возвращает задачу с вхождением данной строки в заголовке или описании
 // @Produce		json
-// @Param			id path int true "Текст в JSON"
-// @Success		200		{object}	tasksResponse	"Успешное получение задач"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 400 {object} taskResponse "Неверный формат входных данных"
-// @Router			/task [get]
+// @Param		input body getTaskByTextRequest true "Текст в JSON"
+// @Success		200	{object} tasksResponse "Успешное получение задач"
+// @Failure		500	{object} taskResponse  "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse  "Неверный формат входных данных"
+// @Router		/task [get]
 func getTaskByText(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		var req getTaskByTextRequest
@@ -114,13 +114,13 @@ func getTaskByText(a app.App) gin.HandlerFunc {
 // @Summary		Обновление полей задачи по её id в postgres
 // @Description	Возвращает задачу с заданным id и изменёнными полями
 // @Produce		json
-// @Param			input body updateTaskRequest true "Новые поля задачи"
-// @Param id path int true "id изменяемой задачи"
-// @Success		200		{object}	taskResponse	"Успешное обновление"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 400 {object} taskResponse "Неверный формат входных данных"
-// @Failure 404 {object} taskResponse "Задача с заданным id не найдена"
-// @Router			/task/{id} [put]
+// @Param		input body updateTaskRequest true "Новые поля задачи"
+// @Param 		id path int true "id изменяемой задачи"
+// @Success		200	{object} taskResponse "Успешное обновление"
+// @Failure		500	{object} taskResponse "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse "Неверный формат входных данных"
+// @Failure 	404 {object} taskResponse "Задача с заданным id не найдена"
+// @Router		/task/{id} [put]
 func updateTask(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
 		id, err := strconv.Atoi(c.Param("id"))
@@ -163,8 +163,8 @@ func updateTask(a app.App) gin.HandlerFunc {
 // @Description	Удаляет задачу с заданным id
 // @Produce		json
 // @Param 		id path int true "id удаляемой задачи"
-// @Success		200		{object}	taskResponse	"Успешное удаление"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
+// @Success		200	{object} taskResponse "Успешное удаление"
+// @Failure		500	{object} taskResponse "Проблемы на стороне сервера"
 // @Failure 	400 {object} taskResponse "Неверный формат входных данных"
 // @Failure 	404 {object} taskResponse "Задача с заданным id не найдена"
 // @Router		/task/{id} [delete]
@@ -194,9 +194,9 @@ func deleteTask(a app.App) gin.HandlerFunc {
 // @Description	Возвращает список задач
 // @Produce		json
 // @Param		input body getTasksByStatusRequest true "Статус и пагинация"
-// @Success		200		{object}	taskResponse	"Успешное получение задач"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 	400 {object} taskResponse "Неверный формат входных данных"
+// @Success		200	{object} tasksResponse "Успешное получение задач"
+// @Failure		500	{object} taskResponse  "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse  "Неверный формат входных данных"
 // @Router		/task/by_status [get]
 func getTasksByStatus(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
@@ -224,9 +224,9 @@ func getTasksByStatus(a app.App) gin.HandlerFunc {
 // @Description	Возвращает список задач
 // @Produce		json
 // @Param		input body getTasksByDateAndStatusRequest true "Дата и статус"
-// @Success		200		{object}	taskResponse	"Успешное получение задач"
-// @Failure		500		{object}	taskResponse	"Проблемы на стороне сервера"
-// @Failure 	400 {object} taskResponse "Неверный формат входных данных"
+// @Success		200	{object} tasksResponse "Успешное получение задач"
+// @Failure		500	{object} taskResponse  "Проблемы на стороне сервера"
+// @Failure 	400 {object} taskResponse  "Неверный формат входных данных"
 // @Router		/task/by_date [get]
 func getTasksByDateAndStatus(a app.App) gin.HandlerFunc {
 	return func(c *gin.Context) {
